modified:   bin/armbian-build 	modified:   bin/armbian-configng 	deleted:    bin/server_setup_web.sh 	modified:   lib/configng/legacy/config_legacy.sh 	modified:   share/armbian-configng/configng.html 	new file:   share/armbian-configng/index.html 	renamed:    src/build/lib/functions/cli/commands.sh -> share/build/lib/functions/cli/commands.sh

--- a/share/armbian-configng/configng.html
+++ b/share/armbian-configng/configng.html
@@ -14,6 +14,14 @@
 </head>
 <body>
     <ul>
+        <script src="commands.json"></script>
+        <script>
+            for (const command of commands) {
+                const li = document.createElement('li');
+                li.textContent = command.name + ': ' + command.description;
+                document.querySelector('ul').appendChild(li);
+            }
+        </script>
     </ul>
 </body>
 </html>
