modified:   bin/armbian-configng

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <th>Category Description</th>
                 </tr>
             </thead>
-            <tbody><tr><td>nmtui</td><td>network</td><td>Set a local net test.</td><td>none.</td><td>network</td><td>Setup the Network settings.</td></tr><tr><td>see_config</td><td>legacy</td><td>Armbian config Legacy</td><td>none</td><td>legacy</td><td>Legacy applications for Armbian.</td></tr><tr><td>run_configure</td><td>desktop</td><td>Configure armbian desktop.</td><td></td><td>software</td><td>Setup Custume/Community software.</td></tr>
+            <tbody><tr><td>nmtui</td><td>network</td><td>Set a local net test.</td><td>none.</td><td>network</td><td>Setup the Network settings.</td></tr><tr><td>configure</td><td>desktop</td><td>Configure armbian desktop.</td><td></td><td>software</td><td>Setup Custume/Community software.</td></tr><tr><td>armbian_config</td><td>legacy</td><td>Armbian config Legacy</td><td>none</td><td>legacy</td><td>Legacy applications for Armbian.</td></tr>
             </tbody>
         </table>
     </body>
