--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 background-color: #4CAF50;
                 color: white;
             }
-            tr:nth-child(even) {background-color: #f2f2f2;}
+            tr:nth-child(even) {color: black; background-color: #f2f2f2; }
         </style>
     </head>
     <body>
