modified:   bin/armbian-build-docs

--- a/share/armbian-configng/armbian-configng.html
+++ b/share/armbian-configng/armbian-configng.html
@@ -52,7 +52,7 @@
     "Group Name": "network",
     "Description": "Set a local net test.",
     "Options": "none.",
-    "Category": "network",
+    "Category": "Network",
     "Category Description": "Setup the Network settings."
   },
   {
@@ -60,32 +60,32 @@
     "Group Name": "desktop",
     "Description": "Configure armbian desktop.",
     "Options": "none",
-    "Category": "software",
+    "Category": "Software",
     "Category Description": "Setup Custume/Community software."
-  },
-  {
-    "Function Name": "Bencharking",
-    "Group Name": "monitor",
-    "Description": "Armbian Monitor and Bencharking.",
-    "Options": "",
-    "Category": "system",
-    "Category Description": "System Custume configurations."
-  },
-  {
-    "Function Name": "armbian_config",
-    "Group Name": "legacy",
-    "Description": "Armbian config Legacy",
-    "Options": "none",
-    "Category": "legacy",
-    "Category Description": "Legacy applications for Armbian."
   },
   {
     "Function Name": "Hello",
     "Group Name": "world",
     "Description": "Hello World.",
     "Options": "none.",
-    "Category": "other",
+    "Category": "Others",
     "Category Description": "Catch all for misc."
+  },
+  {
+    "Function Name": "armbian_config",
+    "Group Name": "legacy",
+    "Description": "Armbian config Legacy",
+    "Options": "none",
+    "Category": "Legacy",
+    "Category Description": "Legacy applications for Armbian."
+  },
+  {
+    "Function Name": "Bencharking",
+    "Group Name": "monitor",
+    "Description": "Armbian Monitor and Bencharking.",
+    "Options": "",
+    "Category": "System",
+    "Category Description": "System Custume configurations."
   }
 ];
     var data = jsonData;    
