--- a/share/armbian-configng/index.html
+++ b/share/armbian-configng/index.html
@@ -34,7 +34,7 @@
                     <th>Category Description</th>
                 </tr>
             </thead>
-            <tbody><tr><td>nmtui</td><td>network</td><td>Set a local net test.</td><td>none.</td><td>network</td><td>Setup the Network settings.</td></tr><tr><td>configure</td><td>desktop</td><td>Configure armbian desktop.</td><td>none</td><td>software</td><td>Setup Custume/Community software.</td></tr><tr><td>Bencharking</td><td>monitor</td><td>Armbian Monitor and Bencharking.</td><td></td><td>system</td><td>System Custume configurations.</td></tr><tr><td>armbian_config</td><td>legacy</td><td>Armbian config Legacy</td><td>none</td><td>legacy</td><td>Legacy applications for Armbian.</td></tr><tr><td>Hello</td><td>world</td><td>Hello World.</td><td>none.</td><td>other</td><td>Catch all for misc.</td></tr>
+            <tbody><tr><td>nmtui</td><td>network</td><td>Set a local net test.</td><td>none.</td><td>Network</td><td>Setup the Network settings.</td></tr><tr><td>configure</td><td>desktop</td><td>Configure armbian desktop.</td><td>none</td><td>Software</td><td>Setup Custume/Community software.</td></tr><tr><td>Hello</td><td>world</td><td>Hello World.</td><td>none.</td><td>Others</td><td>Catch all for misc.</td></tr><tr><td>armbian_config</td><td>legacy</td><td>Armbian config Legacy</td><td>none</td><td>Legacy</td><td>Legacy applications for Armbian.</td></tr><tr><td>Bencharking</td><td>monitor</td><td>Armbian Monitor and Bencharking.</td><td></td><td>System</td><td>System Custume configurations.</td></tr>
             </tbody>
         </table>
 
