modified:   bin/armbian-configng-dev 	deleted:    lib/armbian-configng-dev/Docs/readme.md 	renamed:    lib/armbian-configng/Software/see_monitor.sh -> lib/armbian-configng-dev/Software/see_monitor.sh 	new file:   lib/armbian-configng-dev/System/readme.md

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <th>Category Description</th>
                 </tr>
             </thead>
-            <tbody><tr><td>Bencharking</td><td>monitor</td><td>Armbian Monitor and Bencharking.</td><td></td><td>Software</td><td>Software  System and 3rd party software install</td></tr>
+            <tbody><tr><td>nmtui</td><td>network</td><td>Set a local net test.</td><td>none</td><td>Network</td><td>Network Wired wireless Bluetooth access point</td></tr><tr><td>Bencharking</td><td>monitor</td><td>Armbian Monitor and Bencharking.</td><td></td><td>Software</td><td>Software  System and 3rd party software install</td></tr>
             </tbody>
         </table>
 
