modified:   bin/armbian-configng-dev

--- a/share/armbian-configng/armbian-configng.html
+++ b/share/armbian-configng/armbian-configng.html
@@ -45,7 +45,56 @@
     var menu = document.querySelector("nav ul");
     var slides = document.querySelector(".slide-show");
 	var slideIndex = 0;
-	var jsonData = ;
+	var jsonData =[
+  {
+    "Function Name": "nmtui",
+    "Group Name": "network",
+    "Description": "Set a local net test.",
+    "Options": "none",
+    "Category": "Network",
+    "Category Description": "Network Wired wireless Bluetooth access point"
+  },
+  {
+    "Function Name": "Hello",
+    "Group Name": "locale",
+    "Description": "Hello World.",
+    "Options": "none.",
+    "Category": "Locale",
+    "Category Description": "Personal, Timezone, language, and hostname"
+  },
+  {
+    "Function Name": "Hello",
+    "Group Name": "system",
+    "Description": "Hello System.",
+    "Options": "",
+    "Category": "System",
+    "Category Description": "Personal, Timezone, language hostname"
+  },
+  {
+    "Function Name": "setup",
+    "Group Name": "chroot",
+    "Description": "WIP: Setup a non destructive Test enviroment.",
+    "Options": "none.",
+    "Category": "Misc",
+    "Category Description": "Catch all for miscellaneous scripts"
+  },
+  {
+    "Function Name": "Branding",
+    "Group Name": "setup",
+    "Description": "Banding With Softlinks .",
+    "Options": "none",
+    "Category": "Misc",
+    "Category Description": "Catch all for miscellaneous scripts"
+  },
+  {
+    "Function Name": "Bencharking",
+    "Group Name": "monitor",
+    "Description": "Armbian Monitor and Bencharking.",
+    "Options": "none.",
+    "Category": "Software",
+    "Category Description": "Software  System and 3rd party software install"
+  }
+] ;
     var data = jsonData;    
     var menuItems = [];
     var slideItems = [];
