--- a/share/armbian-configng/armbian-configng-spa.html
+++ b/share/armbian-configng/armbian-configng-spa.html
@@ -68,7 +68,7 @@
     "Description": "Hello System.",
     "Options": "",
     "Category": "System",
-    "Category Description": "Personal, Timezone, language hostname"
+    "Category Description": "System and Security"
   },
   {
     "Function Name": "setup",
@@ -100,7 +100,7 @@
     "Description": "Armbian Monitor and Bencharking.",
     "Options": "none.",
     "Category": "Software",
-    "Category Description": "Software  System and 3rd party software install"
+    "Category Description": "System and 3rd party software install"
   }
 ] ;
     var data = jsonData;    
