modified:   share/armbian-configng/data/armbian-configng.csv 	modified:   share/armbian-configng/data/armbian-configng.json 	deleted:    share/armbian-configng/images/armbian-cpu.svg 	deleted:    share/armbian-configng/images/darkmode.svg 	deleted:    share/armbian-configng/index.app.html 	modified:   share/armbian-configng/readme.md

--- a/share/armbian-configng/armbian-configng-spa.html
+++ b/share/armbian-configng/armbian-configng-spa.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>
-		Armbian armbian-configng </title>
+		Armbian armbian-configng/armbian-configng-spa </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <h1>armbian-configng</h1>
+        <h1>armbian-configng/armbian-configng-spa</h1>
     </header>
     <nav>
         <ul>
@@ -47,60 +47,28 @@
 	var slideIndex = 0;
 	var jsonData =[
   {
-    "Function Name": "nmtui",
-    "Group Name": "network",
-    "Description": "Set a local net test.",
-    "Options": "none",
-    "Category": "Network",
-    "Category Description": "Network Wired wireless Bluetooth access point"
-  },
-  {
-    "Function Name": "Hello",
-    "Group Name": "locale",
-    "Description": "Hello World.",
-    "Options": "none",
-    "Category": "Locale",
-    "Category Description": "Personal, Timezone, language, and hostname"
-  },
-  {
     "Function Name": "Hello",
     "Group Name": "system",
     "Description": "Hello System.",
-    "Options": "",
+    "Options": "none",
     "Category": "System",
     "Category Description": "System and Security"
-  },
-  {
-    "Function Name": "setup",
-    "Group Name": "chroot",
-    "Description": "WIP: Setup a non destructive Test enviroment.",
-    "Options": "none.",
-    "Category": "Misc",
-    "Category Description": "Catch all for miscellaneous scripts"
-  },
-  {
-    "Function Name": "Branding",
-    "Group Name": "setup",
-    "Description": "Banding With Softlinks .",
-    "Options": "none",
-    "Category": "Misc",
-    "Category Description": "Catch all for miscellaneous scripts"
-  },
-  {
-    "Function Name": "Hello",
-    "Group Name": "misc",
-    "Description": "Hello World.",
-    "Options": "none.",
-    "Category": "Misc",
-    "Category Description": "Catch all for miscellaneous scripts"
   },
   {
     "Function Name": "Bencharking",
     "Group Name": "monitor",
     "Description": "Armbian Monitor and Bencharking.",
+    "Options": "",
+    "Category": "System",
+    "Category Description": "System and Security"
+  },
+  {
+    "Function Name": "NMTUI",
+    "Group Name": "network",
+    "Description": "Network Manager.",
     "Options": "none.",
-    "Category": "Software",
-    "Category Description": "System and 3rd party software install"
+    "Category": "Network",
+    "Category Description": "Network Wired wireless Bluetooth access point"
   }
 ] ;
     var data = jsonData;    
