--- a/share/armbian-configng/index.html
+++ b/share/armbian-configng/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>
-		Armbian index.html </title>
+		Armbian index </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <h1>index.html</h1>
+        <h1>index</h1>
     </header>
     <nav>
         <ul>
