Refactor code and update documentation

--- a/share/armbian-configng/index.html
+++ b/share/armbian-configng/index.html
@@ -47,11 +47,19 @@
 	var slideIndex = 0;
 	var jsonData =[
   {
+    "Function Name": "NMTUI",
+    "Group Name": "network",
+    "Description": "Network Manager.",
+    "Options": "none.",
+    "Category": "network",
+    "Category Description": "Network Wired wireless Bluetooth access point"
+  },
+  {
     "Function Name": "Hello",
     "Group Name": "system",
     "Description": "Hello System.",
     "Options": "none",
-    "Category": "System",
+    "Category": "system",
     "Category Description": "System and Security"
   },
   {
@@ -59,16 +67,8 @@
     "Group Name": "monitor",
     "Description": "Armbian Monitor and Bencharking.",
     "Options": "",
-    "Category": "System",
+    "Category": "system",
     "Category Description": "System and Security"
-  },
-  {
-    "Function Name": "NMTUI",
-    "Group Name": "network",
-    "Description": "Network Manager.",
-    "Options": "none.",
-    "Category": "Network",
-    "Category Description": "Network Wired wireless Bluetooth access point"
   }
 ] ;
     var data = jsonData;    
