Update category file names and descriptions

--- a/share/armbian-configng/index5.html
+++ b/share/armbian-configng/index5.html
@@ -52,7 +52,7 @@
     "Description": "Armbian installer",
     "Options": "none",
     "Category": "system",
-    "Category Description": "System and Security"
+    "Category Description": ""
   },
   {
     "Function Name": "NMTUI",
@@ -60,7 +60,7 @@
     "Description": "Network Manager.",
     "Options": "none",
     "Category": "system",
-    "Category Description": "System and Security"
+    "Category Description": ""
   },
   {
     "Function Name": "Bencharking",
@@ -68,7 +68,7 @@
     "Description": "Armbian Monitor and Bencharking.",
     "Options": "none",
     "Category": "system",
-    "Category Description": "System and Security"
+    "Category Description": ""
   },
   {
     "Function Name": "Timezone",
@@ -76,7 +76,7 @@
     "Description": "Time zone configuration",
     "Options": "none",
     "Category": "locales",
-    "Category Description": "Locale Language Region Time Keyboard"
+    "Category Description": ""
   }
 ] ;
     var data = jsonData;
