--- a/share/armbian-configng/index.html
+++ b/share/armbian-configng/index.html
@@ -34,7 +34,7 @@
                     <th>Category Description</th>
                 </tr>
             </thead>
-            <tbody><tr><td>Install</td><td>system</td><td>Armbian installer</td><td>none</td><td>system</td><td></td></tr><tr><td>NMTUI</td><td>network</td><td>Network Manager.</td><td>none</td><td>system</td><td></td></tr><tr><td>Bencharking</td><td>monitor</td><td>Armbian Monitor and Bencharking.</td><td>none</td><td>system</td><td></td></tr><tr><td>Timezone</td><td>locales</td><td>Time zone configuration</td><td>none</td><td>locales</td><td></td></tr>
+            <tbody><tr><td>Install</td><td>system</td><td>Armbian installer</td><td>none</td><td>system</td><td>System and Security</td></tr><tr><td>NMTUI</td><td>network</td><td>Network Manager.</td><td>none</td><td>system</td><td>System and Security</td></tr><tr><td>Bencharking</td><td>monitor</td><td>Armbian Monitor and Bencharking.</td><td>none</td><td>system</td><td>System and Security</td></tr><tr><td>Timezone</td><td>locales</td><td>Time zone configuration</td><td>none</td><td>locales</td><td>Locale Language Region Time Keyboard</td></tr>
             </tbody>
         </table>
 
