added toggle array

--- a/share/armbian-configng/index5.html
+++ b/share/armbian-configng/index5.html
@@ -50,9 +50,10 @@
     "Function Name": "Install",
     "Group Name": "system",
     "Description": "Armbian installer",
-    "Options": "none",
+    "Options": "Why What not-How",
     "Category": "system",
-    "Category Description": "System and Security"
+    "Category Description": "System and Security",
+    "Toggle": "hide"
   },
   {
     "Function Name": "NMTUI",
@@ -60,7 +61,8 @@
     "Description": "Network Manager.",
     "Options": "none",
     "Category": "system",
-    "Category Description": "System and Security"
+    "Category Description": "System and Security",
+    "Toggle": "show"
   },
   {
     "Function Name": "Bencharking",
@@ -68,7 +70,8 @@
     "Description": "Armbian Monitor and Bencharking.",
     "Options": "none",
     "Category": "system",
-    "Category Description": "System and Security"
+    "Category Description": "System and Security",
+    "Toggle": "show"
   },
   {
     "Function Name": "Timezone",
@@ -76,7 +79,8 @@
     "Description": "Time zone configuration",
     "Options": "none",
     "Category": "locales",
-    "Category Description": "Locale Language Region Time Keyboard"
+    "Category Description": "Locale Language Region Time Keyboard",
+    "Toggle": "show"
   }
 ] ;
     var data = jsonData;
