--- a/share/armbian-configng/index.html
+++ b/share/armbian-configng/index.html
@@ -13,203 +13,7 @@
 	<!-- <link rel="stylesheet" href="css/style.css"> -->
 
 	<style>
-		html,
-		body {
-			width: 100%;
-			height: 100%;
-			font-family: Arial, sans-serif;
-			background-color: #222;
-			color: #fff;
-			margin: 0;
-			padding: 0;
-		}
-		* {
-			box-sizing: border-box;
-		}
-
-		.container {
-			text-align: center;
-            padding: 50px;
-			overflow: hidden;
-		}
-
-		.content {
-			width: 100%;
-			height: 300px;
-			transition: all 1s ease;
-		}
-
-		nav ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333;
-		}
-
-		nav ul li {
-			float: left;
-		}
-
-		nav ul li a {
-			display: block;
-			padding: 10px;
-			color: #fff;
-			text-decoration: none;
-		}
-
-		footer {
-			background-color: #333;
-			color: #fff;
-			text-align: center;
-			padding: 10px;
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-		}
-
-        .logo-main {
-            width: 300px;
-            height: 300px;
-            fill: black;
-
-
-        }
-
-		.dark-mode {
-			background-color: #222;
-			color: #fff;
-		}
-
-		.light-mode {
-			background-color: #fff;
-			color: #222;
-		}
-
-		body.dark-mode a {
-			color: #eee;
-			/* Light color for dark mode */
-		}
-
-		body a {
-			color: #333;
-			/* Dark color for light mode */
-		}
-
-		.top-right {
-			position: absolute;
-			top: 0;
-			right: 0;
-			padding: 10px;
-			padding: 10px;
-			z-index: 1;
-			color: #fff;
-		}
-
-		.menu {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			position: fixed;
-			top: 0;
-			left: 0;
-			width: 100%;
-			background-color: #333;
-			padding: 10px;
-			z-index: 1;
-			color: #fff;
-		}
-
-		.menu ul {
-			list-style-type: none;
-			padding: 0;
-			margin: 0;
-			display: block;
-		}
-
-		.menu li {
-			display: inline-block;
-			margin-right: 10px;
-		}
-
-		.menu li a {
-			color: #fff;
-			text-decoration: none;
-		}
-
-		.menu li a:hover {
-			color: #ccc;
-		}
-
-		.menu-toggle {
-			cursor: pointer;
-			font-size: 24px;
-			/* Increase the font size of the hamburger icon */
-		}
-
-		.menu-toggle.active+ul {
-			display: block;
-			/* Show the dropdown menu when the menu toggle is active */
-		}
-
-		.menu-toggle+ul {
-			display: none;
-			/* Hide the dropdown menu by default */
-			position: absolute;
-			/* Position the dropdown relative to the menu toggle */
-			min-width: 160px;
-			/* Set a minimum width for the dropdown */
-			z-index: 1;
-			/* Ensure the dropdown appears on top of other elements */
-		}
-
-		.menu-toggle.active+ul {
-			display: block;
-			/* Show the dropdown menu when the menu toggle is active */
-		}
-
-		.menu-toggle+ul li {
-			display: block;
-			/* Make the list items appear vertically */
-		}
-
-		.menu-container {
-			position: relative;
-			/* This makes the dropdown menu position itself relative to this container */
-		}
-
-		.dropdown {
-			display: none;
-			position: absolute;
-			background-color: #333;
-			/* Set the background color of the dropdown menu */
-			padding: 10px;
-			/* Add padding to the dropdown menu */
-			min-width: 160px;
-			box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-			z-index: 1;
-		}
-
-		.dropdown li {
-			display: block;
-			padding: 5px 10px;
-			/* Add padding to each list item in the dropdown menu */
-		}
-
-		.icon {
-			width: 24px;
-			/* Adjust as needed */
-			height: 24px;
-			/* Adjust as needed */
-			fill: #fff;
-			/* Adjust to match your light mode color */
-		}
-
-		body.dark-mode .icon {
-			fill: #000;
-
-			/* Adjust to match your dark mode color */
-		}
+	html,body{width:100%;height:100%;font-family:Arial,sans-serif;background-color:#222;color:#fff;margin:0;padding:0}*{box-sizing:border-box}.container{text-align:center;padding:50px;overflow:hidden}.content{width:100%;height:300px;transition:all 1s ease}nav ul{list-style-type:none;margin:0;padding:0;overflow:hidden;background-color:#333}nav ul li{float:left}nav ul li a{display:block;padding:10px;color:#fff;text-decoration:none}footer{background-color:#333;color:#fff;text-align:center;padding:10px;position:absolute;bottom:0;width:100%}.logo-main{width:300px;height:300px;fill:#000}.dark-mode{background-color:#222;color:#fff}.light-mode{background-color:#fff;color:#222}body.dark-mode a{color:#eee}body a{color:#333}.top-right{position:absolute;top:0;right:0;padding:10px;padding:10px;z-index:1;color:#fff}.menu{display:flex;align-items:center;justify-content:space-between;position:fixed;top:0;left:0;width:100%;background-color:#333;padding:10px;z-index:1;color:#fff}.menu ul{list-style-type:none;padding:0;margin:0;display:block}.menu li{display:inline-block;margin-right:10px}.menu li a{color:#fff;text-decoration:none}.menu li a:hover{color:#ccc}.menu-toggle{cursor:pointer;font-size:24px}.menu-toggle.active+ul{display:block}.menu-toggle+ul{display:none;position:absolute;min-width:160px;z-index:1}.menu-toggle.active+ul{display:block}.menu-toggle+ul li{display:block}.menu-container{position:relative}.dropdown{display:none;position:absolute;background-color:#333;padding:10px;min-width:160px;box-shadow:0 8px 16px 0 rgba(0,0,0,.2);z-index:1}.dropdown li{display:block;padding:5px 10px}.icon{width:24px;height:24px;fill:#fff}body.dark-mode .icon{fill:#000}
 
 	</style>
 </head>
@@ -227,7 +31,7 @@
 		</div>
 		<div class="top-right">
 			<span id="time"></span>
-			<a href="#" onclick="toggleDarkMode()" class="button-style icon"><img src="imgs/darkmode.svg" alt="Toggle Dark Mode"></a>
+			<a href="#" onclick="toggleDarkMode()" class="button-style icon"><img src="imgs/darkmode.svg" alt="Toggle Dark Mode" width="24px" height="24px"></a>
 		</div>
 	</div>
 
