Update FTP deployment configuration and fix HTML syntax

--- a/share/armbian-configng/index.html
+++ b/share/armbian-configng/index.html
@@ -64,3 +64,9 @@ function updateTime() {
 
 // Update the time every second
 setInterval(updateTime, 1000);</script>
+
+</script>
+
+
+</body>
+</html>
